PLT-4063 - Fixing spacing for LDAP button

--- a/webapp/sass/routes/_admin-console.scss
+++ b/webapp/sass/routes/_admin-console.scss
@@ -52,6 +52,12 @@
         }
     }
 
+    .btn {
+        &.btn-spacing--right {
+            margin-right: 10px;
+        }
+    }
+
     .log__panel {
         background-color: white;
         border: 1px solid #ddd;
